<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.GroupSearchPublicActivity"
    android:id="@+id/group_search_public_activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/title_bar"
        android:padding="15dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/Peer2Learn_image_view"
            android:src="@drawable/peer_to_learn"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/profile_image_view"
            android:src="@drawable/profile_icon"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"
        android:layout_below="@id/title_bar"/>

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:layout_marginStart="20dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_blue_edit_text"
        android:hint="@string/search_module"
        android:maxLines="1"
        android:singleLine="true"
        android:padding="20dp"
        android:textColor="@color/blue"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/search_edit_text"
        android:visibility="gone"
        android:id="@+id/added_filter_layout">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_background_filter"
            android:padding="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/minimum_users_filter_layout">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/team"
                android:layout_marginEnd="10dp"
                android:id="@+id/minimum_users_filter_image_view"
                android:tint="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/users_filter"
                android:text="@string/empty"
                android:textSize="10dp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:id="@+id/language_filer_layout"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_background_filter"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:id="@+id/language_filter_image_view"
                android:src="@drawable/language"
                android:layout_marginEnd="10dp"
                android:tint="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:id="@+id/language_filter"
                android:textSize="10dp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_background_filter"
            android:id="@+id/progress_filter_layout"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/progress"
                android:layout_marginEnd="10dp"
                android:id="@+id/progress_filter_image_view"
                android:tint="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:id="@+id/progress_filter"
                android:textSize="10dp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/add"
        android:layout_below="@id/search_edit_text"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/add_filter_button"
        android:tint="@color/blue"
        android:layout_alignParentEnd="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/search_edit_text"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:id="@+id/add_filter_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/set_minimum_of_users_layout"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:tint="@color/blue"
                android:layout_marginEnd="10dp"
                android:id="@+id/set_minimum_of_users_image_view"
                android:src="@drawable/team"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:maxLines="1"
                android:inputType="number"
                android:textColor="@color/blue"
                android:singleLine="true"
                android:id="@+id/set_minimum_of_users"
                android:hint="@string/set_minimum_users"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/set_language_layout">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:tint="@color/blue"
                android:layout_marginEnd="10dp"
                android:src="@drawable/language"
                android:id="@+id/set_language_image_view"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:singleLine="true"
                android:maxLines="1"
                android:textColor="@color/blue"
                android:id="@+id/set_language"
                android:hint="@string/set_language"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/set_progress_layout"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:id="@+id/set_progress_image_view"
                android:layout_height="20dp"
                android:tint="@color/blue"
                android:layout_marginEnd="10dp"
                android:src="@drawable/progress"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/blue"
                android:id="@+id/set_progress"
                android:singleLine="true"
                android:hint="@string/set_minimum_progress"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submit_button"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_green_button"
            android:padding="10dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/submit"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/results_group_recycler_view"
        android:layout_below="@id/add_filter_button"/>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:menu_animationDelayPerItem="50"
        app:menu_backgroundColor="@android:color/transparent"
        app:menu_buttonSpacing="0dp"
        app:menu_colorNormal="@color/green"
        app:menu_colorPressed="@color/green"
        app:menu_colorRipple="#99FFFFFF"
        app:menu_fab_label="@string/close"
        app:menu_fab_size="mini"
        app:menu_icon="@drawable/plus"
        app:menu_labels_colorNormal="#333333"
        app:menu_labels_colorPressed="#444444"
        app:menu_labels_colorRipple="#66FFFFFF"
        app:menu_labels_cornerRadius="3dp"
        app:menu_labels_ellipsize="none"
        app:menu_labels_margin="0dp"
        app:menu_labels_maxLines="-1"
        app:menu_labels_padding="8dp"
        app:menu_labels_paddingBottom="4dp"
        app:menu_labels_paddingLeft="8dp"
        app:menu_labels_paddingRight="8dp"
        app:menu_labels_paddingTop="4dp"
        app:menu_labels_position="left"
        app:menu_labels_showShadow="true"
        app:menu_labels_singleLine="false"
        app:menu_labels_textColor="#FFFFFF"
        app:menu_labels_textSize="14sp"
        app:menu_openDirection="up"
        app:menu_shadowColor="#66000000"
        app:menu_shadowRadius="4dp"
        app:menu_shadowXOffset="1dp"
        app:menu_shadowYOffset="3dp"
        app:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/create_group_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="createPublicGroup"
            android:src="@drawable/plus"
            app:fab_colorNormal="@color/green"
            app:fab_colorPressed="@color/green"
            app:fab_label="@string/create_group"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/private_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="searchPrivateGroup"
            android:src="@drawable/lock"
            app:fab_colorNormal="@color/green"
            app:fab_colorPressed="@color/green"
            app:fab_label="@string/search_private_group"
            app:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>
</RelativeLayout>