<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.HomeActivity"
    android:id="@+id/home_activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/title_bar"
        android:padding="15dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/Peer2Learn_image_view"
            android:src="@drawable/peer_to_learn"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/profile_image_view"
            android:src="@drawable/profile_icon"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"
        android:layout_below="@id/title_bar"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:textSize="40dp"
        android:textStyle="bold"
        android:id="@+id/groups_text_view"
        android:textColor="@color/blue"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/group"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:textSize="15dp"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/sort_by_text_view"
        android:text="@string/sort_by"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/groups_recycler_view"
        android:layout_below="@id/groups_text_view"/>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/add_group_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="22dp"
        android:src="@drawable/plus"
        app:fab_colorNormal="@color/green"
        app:fab_colorPressed="@color/green"
        app:fab_size="mini" />

</RelativeLayout>